docs: 更新文档配置和资源路径
更新GitHub Pages的基础URL和仓库信息
将静态资源路径从/assets/改为/js/和/css/

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -27,4 +27,4 @@ title: Hammerspoon 配置指南
   ↑
 </button>
 
-<script src="{{ '/assets/js/main.js' | relative_url }}"></script>
+<script src="{{ '/js/main.js' | relative_url }}"></script>
