--- a/docs/_layouts/base.html
+++ b/docs/_layouts/base.html
@@ -7,7 +7,7 @@
   <meta name="keywords" content="{{ page.keywords | default: site.keywords | escape }}">
   <title>{% if page.title %}{{ page.title | escape }} | {% endif %}{{ site.title | escape }}</title>
   
-  <link rel="stylesheet" href="{{ '/assets/css/styles.css' | relative_url }}">
+  <link rel="stylesheet" href="{{ '/css/styles.css' | relative_url }}">
   
   {% if page.canonical_url %}
   <link rel="canonical" href="{{ page.canonical_url }}">
