--- a/docs/_layouts/main.html
+++ b/docs/_layouts/main.html
@@ -26,11 +26,16 @@ title: Hammerspoon 配置指南
                 </a>
                 <div class="github-stats">
                     <span class="stat-item">
-                        <span class="stat-icon">★</span>
+                        <svg class="stat-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="currentColor">
+                            <path d="M8 .25a.75.75 0 0 1 .673.418l1.882 3.815 4.21.612a.75.75 0 0 1 .416 1.279l-3.046 2.97.719 4.192a.75.75 0 0 1-1.088.791L8 12.347l-3.766 1.98a.75.75 0 0 1-1.088-.79l.72-4.194L.818 6.374a.75.75 0 0 1 .416-1.28l4.21-.611L7.327.668A.75.75 0 0 1 8 .25Zm0 2.445L6.615 5.5a.75.75 0 0 1-.564.41l-3.097.45 2.24 2.184a.75.75 0 0 1 .216.664l-.528 3.084 2.769-1.456a.75.75 0 0 1 .698 0l2.77 1.456-.53-3.084a.75.75 0 0 1 .216-.664l2.24-2.183-3.096-.45a.75.75 0 0 1-.564-.41L8 2.694Z"></path>
+                        </svg>
                         <span class="stat-value" id="github-stars">--</span>
                     </span>
                     <span class="stat-item">
-                        <span class="stat-icon">⑂</span>
+                        <svg class="stat-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="currentColor">
+                            <path d="M5 3.25a.75.75 0 1 1 1.5 0 .75.75 0 0 1-1.5 0Zm0 2.122a2.25 2.25 0 1 0 4.5 0 2.25 2.25 0 0 0-4.5 0Zm3.75 2.878a.75.75 0 1 1 0 1.5.75.75 0 0 1 0-1.5Z"></path>
+                            <path fill-rule="evenodd" d="M1.5 1.75a.25.25 0 0 1 .25-.25h12.5a.25.25 0 0 1 .25.25v2.5a.25.25 0 0 1-.25.25h-2.063c.1.326.164.668.164 1a1.75 1.75 0 1 1-3.5 0c0-.332.064-.674.164-1H1.75a.25.25 0 0 1-.25-.25v-2.5Zm1.75-.25v2.5h6.597a2.75 2.75 0 0 0-.072 1.5h-6.525a.75.75 0 0 1-.75-.75v-1.75h-.5Zm10.75.25v2.5h-2.5a.75.75 0 0 1 0-1.5h1.75v-1h-.5a.25.25 0 0 1 0-.5h2.5a.25.25 0 0 1 .25.25Zm-3 3.75a.75.75 0 1 0 0-1.5.75.75 0 0 0 0 1.5Zm-2.25-.75a.75.75 0 1 1 1.5 0 .75.75 0 0 1-1.5 0Zm-3 0a.75.75 0 1 1 1.5 0 .75.75 0 0 1-1.5 0Z" clip-rule="evenodd"></path>
+                        </svg>
                         <span class="stat-value" id="github-forks">--</span>
                     </span>
                 </div>
